# axum_meme_posting_example

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DETAILED_PROJECT_DOCUMENTATION.md  Dockerfile  LICENSE  README.md  TUTORIAL.md  docker-compose.yaml
src/: aws_clients.rs  config.rs  db.rs  domain.rs  error_types.rs  errors.rs  handlers.rs  main.rs  models.rs  repositories.rs  routes.rs  startup.rs  storage.rs
