[package]
name = "axum_meme_posting_example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
modyne = "0.3"
aws-config = { version = "1.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.82"
aws-sdk-dynamodb = "1.71"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors"] }
hyper = "1.6"

