[package]
name = "axum_meme_posting_example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = { version = "1.3", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.82"
aws-sdk-dynamodb = "1.71"
aws-credential-types = "1.2"
uuid = { version = "1", features = ["v4", "serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1.0"
aws-smithy-types = "1.3" # For operation::BuildError

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15" # To load .env files during development
